# CASDA-MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  pyproject.toml
.cursor/skills/casda-find-and-inspect/: SKILL.md
.cursor/skills/casda-reproducible-manifest/: SKILL.md
.cursor/skills/casda-safe-archive-access/: SKILL.md
.github/workflows/: ci.yml
docs/: architecture.md  casda-capability-matrix.md
src/casda_mcp/: __init__.py  __main__.py  adql.py  cache.py  cli.py  client.py  config.py  cursor.py  dap_navigation.py  doi.py  downloads.py  errors.py  models.py  observability.py  parsers.py  provenance.py  query.py  server.py  service.py  skills_loader.py  state.py  vosi.py
src/casda_mcp/skills/casda-reproducible-manifest/: SKILL.md
src/casda_mcp/skills/casda-safe-archive-access/: SKILL.md
src/casda_mcp/skills/casda-stage-and-download/: SKILL.md
tests/: conftest.py  test_adql.py  test_client.py  test_config.py  test_contract.py  test_cursor.py  test_dap_navigation.py  test_datalink_jobs.py  test_discovery.py  test_doi.py  test_downloads.py  test_events.py  test_integration_mock.py  test_live.py  test_manifest.py  test_mcp_tools.py  test_observability.py  test_parsers.py  test_prompts_skills.py  test_provenance.py  test_query.py  test_service.py  test_staging.py  test_state.py  test_tap_jobs.py  test_vo_search.py
tests/fixtures/: datacite_doi.json  datalink_cutout.xml  doi_csl.json  events.xml  scs_query.xml  sia1_query.xml  sia1_surveys.xml  sia2_query.xml  ssa_query.xml  tap_examples.xml  uws_cutout_completed.xml  uws_tap_job_aborted.xml  uws_tap_job_completed.xml  uws_tap_job_queued.xml  vosi_availability.xml  vosi_availability_down.xml  vosi_capabilities.xml  votable_query_error.xml
